--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <header>
 <h1>Casey Mullen Portfolio</h1>
+    <nav>
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    </header>
+    <main id="main">
+        <section id="about" class="section">
+            <h2>about</h2>
+        </section>
+        <section id="skills" class="section">
+            <h2>skills</h2>
+        </section>
+        <section id="projects" class="section">
+            <h2>projects</h2>
+        </section>
+        <section id="contact" class="section">
+            <h2>contact</h2>
+        </section>
+    </main>
 </body>
 </html>
